--- a/src/main/resources/data/wanderlust/loot_modifiers/item/ancient_tablet_reinforcement/bastion_treasure.json
+++ b/src/main/resources/data/wanderlust/loot_modifiers/item/ancient_tablet_reinforcement/bastion_treasure.json
@@ -10,5 +10,5 @@
       "chance": 0.2
     }
   ],
-  "item": "wanderlust:ancient_tablet_fusion"
+  "item": "wanderlust:ancient_tablet_reinforcement"
 }
