--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,9 @@ neoForge {
 
             // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
             systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
+
+            programArgument("--username")
+            programArgument("MidasDaEpik")
         }
 
         server {
